--- a/aplicacion.html
+++ b/aplicacion.html
@@ -44,8 +44,8 @@
 					<a href="#"><span class="icon-user-circle"></span>Información<span
 							class="boton_submenu icon-chevron-down"></span></a>
 					<ul class="opciones_informacion">
-						<li><a href="#"><span class="icon-id-card"></span>Perfil</a></li>
-						<li><a href="#"><span class="icon-cog"></span>Ajustes</a></li>
+						<li><a href="appinformacion.html"><span class="icon-id-card"></span>Perfil</a></li>
+						<li><a href="profile.html"><span class="icon-cog"></span>Ajustes</a></li>
 						<li><a href="#"><span class="icon-power-off"></span>Cerrar Sesión</a></li>
 					</ul>
 				</li>
