--- a/profile.html
+++ b/profile.html
@@ -46,7 +46,7 @@
 					<a href="#"><span class="icon-user-circle"></span>Información<span
 							class="boton_submenu icon-chevron-down"></span></a>
 					<ul class="opciones_informacion">
-						<li><a href="appinformacion.html"><span class="icon-id-card"></span>Perfil</a></li>
+						<li><a href="#"><span class="icon-id-card"></span>Perfil</a></li>
 						<li><a href="#"><span class="icon-cog"></span>Ajustes</a></li>
 						<li><a href="#"><span class="icon-power-off"></span>Cerrar Sesión</a></li>
 					</ul>
