--- a/appinformacion.html
+++ b/appinformacion.html
@@ -237,7 +237,7 @@
 	</main>
 
     <div class="container">
-        <div class="header-perfil">
+        <div class="header">
             <input type="file" id="fileInput" accept="image/*">
             <img src="https://via.placeholder.com/150" alt="Foto de perfil" class="profile-pic" id="profilePic">
             <h1 class="name" id="userName" contenteditable="true">Juan Pérez</h1>
