--- a/modulos.html
+++ b/modulos.html
@@ -25,7 +25,7 @@
             <div class="contenedor_aplicacion">
                 <div class="row">
                     <div class="logo">
-                        <a href="index.html">BIENVENIDO AL CENTRO EDUCATIVO RURAL NICOLÁS DE FEDERMÁN</a>
+                        <a href="Controlador.php?accion=inicio">BIENVENIDO AL CENTRO EDUCATIVO RURAL NICOLÁS DE FEDERMÁN</a>
                     </div>
                     <div class="boton_abrir_menu">
                         <span></span>
@@ -313,9 +313,9 @@
                     </div>
                 </div>
             </div>
-            <script src="script_aplicacion.js"></script>
-            <script src="script_modulos.js"></script>
         </main>
+        <script src="script_aplicacion.js"></script>
+        <script src="script_modulos.js"></script>
 
 
         <!--=================================footer=================================-->
