--- a/cursosnormales.html
+++ b/cursosnormales.html
@@ -10,6 +10,116 @@
     <link href="https://fonts.cdnfonts.com/css/open-sans" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
     <style>
+/* Modern modal enhancement */
+.modal-content.modern-modal {
+    font-family: 'Roboto', sans-serif;
+    animation: fadeInModal 0.3s ease;
+    border: 1px solid #ddd;
+    background: #ffffff;
+}
+
+@keyframes fadeInModal {
+    from {
+        opacity: 0;
+        transform: scale(0.95);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+        /* Section Styles for All Courses */
+.section {
+    margin: 40px 0;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.courses-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.course-card-simple {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 15px;
+    text-align: center;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.course-card-simple:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.course-card-simple h3 {
+    margin: 0;
+    font-size: 1.2em;
+    color: #333;
+}
+
+/* Modal Styles */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 500px;
+    width: 90%;
+    position: relative;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 20px;
+    cursor: pointer;
+    color: #333;
+}
+
+.close-button:hover {
+    color: #F5A623;
+}
+
+.register-button {
+    background-color: #F5A623;
+    color: #fff;
+    padding: 12px 30px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.register-button:hover {
+    background-color: #e6951a;
+}
         /* Reset and Base Styles */
         * {
             margin: 0;
@@ -325,17 +435,30 @@
         <div id="courses-content">
             <!-- Courses List (shown when logged in) -->
             <div class="courses-container" id="courses-list" style="display: none;">
-                <h1 style="grid-column: 1 / -1; text-align: center;">Mis Cursos</h1>
+                <h1 style="grid-column: 1 / -1; text-align: center;">Cursos</h1>
                 <!-- Courses will be dynamically inserted here -->
             </div>
             
-            <!-- Login Prompt (shown when not logged in) -->
-            <div class="login-message" id="login-required" style="display: block;">
-                <h2>Acceso a cursos</h2>
-                <p>Para ver tus cursos y acceder al contenido educativo, por favor inicia sesión en tu cuenta.</p>
-                <button class="login-btn" onclick="window.location.href='cuenta.html'">Iniciar sesión</button>
-            </div>
+            <!<section class="section">
+    <div class="container">
+        <h2>Todas las Materias</h2>
+        <div class="courses-grid" id="all-courses-list">
+            <!-- Las materias se generarán dinámicamente con JavaScript -->
         </div>
+    </div>
+</section>
+
+<!-- Modal para detalles del curso -->
+<div id="courseModal" class="modal">
+<div class="modal-content modern-modal">
+    <span class="close-button">×</span>
+    <img id="modal-image" src="" alt="Imagen del curso" style="width: 100%; border-radius: 8px; max-height: 200px; object-fit: cover; margin-bottom: 15px;">
+    <h3 id="modal-title" style="margin-bottom: 10px;"></h3>
+    <p id="modal-description" style="color: #555; line-height: 1.5; margin-bottom: 20px;"></p>
+    <button class="register-button" onclick="window.location.href='cuenta.html'">Registrarse</button>
+</div>
+
+</div>
     </main>
 
     <!-- Footer -->
@@ -609,6 +732,54 @@
                 document.getElementById('login-required').style.display = 'block';
             }
         });
+        // Render all courses for non-logged-in users
+function renderAllCourses() {
+    const allCoursesList = document.getElementById('all-courses-list');
+    Object.keys(coursesData).forEach(courseId => {
+        const course = coursesData[courseId];
+        const courseCard = document.createElement('div');
+        courseCard.classList.add('course-card-simple');
+       courseCard.innerHTML = `
+    <div class="course-image" style="height: 150px; overflow: hidden; border-radius: 8px; margin-bottom: 10px;">
+        <img src="${course.image}" alt="${course.title}" style="width: 100%; height: 100%; object-fit: cover;">
+    </div>
+    <h3>${course.title}</h3>
+`;
+
+        courseCard.addEventListener('click', () => {
+            const modal = document.getElementById('courseModal');
+            const modalTitle = document.getElementById('modal-title');
+            const modalDescription = document.getElementById('modal-description');
+            modalTitle.textContent = `¡Wow! Hemos notado que te interesa saber más de ${course.title}`;
+            modalDescription.textContent = course.description;
+            modal.style.display = 'flex';
+        });
+        allCoursesList.appendChild(courseCard);
+    });
+}
+
+// Modal close functionality
+document.addEventListener('DOMContentLoaded', () => {
+    renderAllCourses(); // Always render all courses
+    const modal = document.getElementById('courseModal');
+    const closeButton = document.querySelector('.close-button');
+
+    if (closeButton) {
+        closeButton.addEventListener('click', () => {
+            modal.style.display = 'none';
+        });
+    }
+
+    window.addEventListener('click', (event) => {
+        if (event.target === modal) {
+            modal.style.display = 'none';
+        }
+    });
+});
+const modalImage = document.getElementById('modal-image');
+modalImage.src = course.image;
+modalImage.alt = course.title;
+
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'933bca518b70675f',t:'MTc0NTIyNzA2Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
